// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Button\` renders 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  cursor: pointer;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: background has value #ff0000 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  background-color: #ff0000;
  cursor: pointer;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: borderRadius has value 1px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  border-radius: 1px;
  cursor: pointer;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: borderStyle has value solid 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  border-style: solid;
  cursor: pointer;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: borderWidth has value 2px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  border-width: 2px;
  cursor: pointer;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: padding has value 10px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  cursor: pointer;
  padding: 10px;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: padding has value 10px 20px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  cursor: pointer;
  padding: 10px 20px;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: color has value #ff0000 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  color: #ff0000;
}

.c0 {
  cursor: pointer;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
    color="#ff0000"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: color has value #ff0000 2`] = `
<span
  class="sc-bdVaJa kBwMOF"
  color="#ff0000"
>
  Test text
</span>
`;

exports[`\`Typography\` styles Prop: size has value 14px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
}

.c0 {
  cursor: pointer;
}

<button
  class="c0"
  cursor="pointer"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: size has value 14px 2`] = `
<span
  class="sc-bdVaJa fOTNNx"
>
  Test text
</span>
`;
